--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,8 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks = # 5"
+    "number_of_weeks = \"5\"\n",
+    "number_of-# 5"
    ]
   },
   {
