--- a/index.ipynb
+++ b/index.ipynb
@@ -138,14 +138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_of_weeks = \"5\"\n",
-    "number_of-# 5"
+    "number_of_weeks # 5"
    ]
   },
   {
